--- a/scss/_acercadeventasarticulos.scss
+++ b/scss/_acercadeventasarticulos.scss
@@ -12,14 +12,36 @@
         "main imgmapa"
         "main imgventas"
         "footer footer"
+
 }
 
-h1 {
-    margin-bottom: 50px;
+.encabezado_titulo {
+
+    h1 {
+        text-align: center;
+        margin-top: auto;
+        color: white;
+    }
+}
+
+.slide {
+    text-align: center;
+
+    img {
+        width: 750px;
+        height: 445px;
+    }
+
 }
 
 .parrafo_ventas {
     font-size: 20px;
+    text-align: center;
+
+    p {
+        margin: 35px 0 15px 0;
+        color: white;
+    }
 }
 
 .mapa_ventas {
@@ -40,6 +62,7 @@ h1 {
 
 .main_ventas {
     grid-area: main;
+    background-color: black;
 }
 
 .imagen_ventas {
@@ -50,19 +73,33 @@ h1 {
 
 @media screen and (max-width: 768px) {
 
-    h1 {
-        margin-bottom: 15px;
-        font-size: 20px;
+    .encabezado_titulo {
 
+        h1 {
+            font-size: 20px;
+        }
     }
 
     .parrafo_ventas {
         font-size: 15px;
     }
 
-    .mapa_ventas {
-        padding: 2% -4%;
+    .mapa_ventas iframe {
+        text-align: center;
+        margin: auto auto auto -20px;
+        width: 450px;
+        height: 500px;
     }
+
+    .slide {
+        margin: auto 10px auto auto;
+
+        img {
+            width: 450px;
+            height: 500px;
+        }
+    }
+
 }
 
 /* ----------Medidas para Celular-------- */
@@ -85,15 +122,25 @@ h1 {
         grid-area: inicio;
     }
 
-    .main_ventas{
+    .main_ventas {
         grid-area: main;
     }
-    .mapa_ventas{
+
+    .mapa_ventas {
         grid-area: maps;
+
+        iframe {
+            grid-area: mapa;
+            text-align: center;
+            margin: auto;
+            width: 500px;
+            height: 400px;
+        }
     }
 
-    .imagen_ventas{
+    .imagen_ventas {
         grid-area: imgv;
+
     }
 
     .Footer {
@@ -101,37 +148,30 @@ h1 {
     }
 
     .encabezado_titulo h1 {
-        margin-left: -20px;
+        text-align: center;
+        font-size: 20px;
+        margin: auto;
     }
 
-    .parrafo_ventas p {
-        font-size: 12px;
-        text-align: left;
-        padding: 2% 3%;
-        margin-bottom: 5px;
+    .parrafo_ventas {
+        p {
+            font-size: 15px;
+            margin-left: -30px;
+            padding: 2% 10%;
+            margin-bottom: 5px;
+            margin-top: 10px;
+        }
     }
 
-    .mapa_ventas {
-        padding: 2% -10%;
-        text-align: left;
-        margin-left: 15px;
+    .slide {
+        text-align: center;
 
+        img {
+            margin: auto;
+            width: 500px;
+            height: 400px;
+        }
     }
 
-    .imagen_ventas {
-        text-align: left;
-        margin-left: 15px;
-    }
+
 }
-
-
-
-
-
-
-
-
-
-
-
-
