--- a/css/styles.css
+++ b/css/styles.css
@@ -118,6 +118,10 @@ a:hover {
   justify-self: center;
 }
 
+.encabezado_tituloo h1 {
+  color: black;
+}
+
 .img_index {
   background: rgb(0, 195, 255);
   background: linear-gradient(180deg, rgb(0, 195, 255) 17%, rgb(9, 9, 106) 44%, rgb(2, 0, 36) 76%);
